# fauxdb

./: .clang-format  .cursorrules  .env  .gitignore  .gitmodules  BRIDGE_VERIFICATION_README.md  CMakeCache.txt  CMakeLists.txt  CODE_IMPROVEMENTS.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTDB_COMPATIBILITY.md  EXTENSIONS_SUMMARY.md  FAUXDB_BRIDGE_VERIFICATION.md  FINAL_VERIFICATION_SUMMARY.md  LICENSE  Makefile  PROJECT_IMPROVEMENTS_SUMMARY.md  README.md  TEST_IMPROVEMENTS.md  build.sh  c.sh  capture_baseline.sh  cmake_install.cmake  codecov.yml  run.sh  setup_ci.sh  test.sh  test_auth_functionality.sh  test_auth_summary.sh  test_authentication_comprehensive.sh  test_basic_auth.sh  test_integrated_auth.sh  test_modular_auth.sh  test_refactored_auth.sh  test_results.json  test_runner.sh  vcpkg.json  verify_implementation.sh
.circleci/: README.md  config.yml  continue_config.yml  deploy_config.yml  docker_config.yml  monitoring_config.yml
.cursor/rules/: cpp-style.mdc
.github/: topics.md
.github/workflows/: ci.yml  docs.yml  fauxdb-pg17.yml  release.yml  security.yml
config/: fauxdb.conf  fauxdb.json  fauxdb.service  fauxdb.toml  fauxdb.yaml  fauxdb_auth.json  fauxdb_auth.yaml  test.yaml
doc/: architecture.md  configuration.md  development.md  installation.md  usage.md
docker/: .dockerignore  DOCKER.md  Dockerfile  Dockerfile.dev  README.md
docker/compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/postgres/: init.sql
docs/: .gitignore  _config.yml  book.toml  custom.css  index.md  package-lock.json  package.json
docs/guides/: documentdb-extension.md
docs/src/: SUMMARY.md  api-crud.md  index.md  installation.md  quick-start.md
docs/tutorials/: quick-start.md
extension/bson/: Makefile  README.md  bson--1.0.sql  bson.control  bson.dylib  regression.diffs  regression.out  test_extension.sh  test_extension.sql
include/: CConfig.hpp  CConfiguration.hpp  CHelp.hpp  CLogMacros.hpp  CLogger.hpp  CServer.hpp  CServerConfig.hpp  CSignal.hpp  CTypes.hpp  IInterfaces.hpp
include/auth/: CAuthRegistry.hpp  CBasicAuth.hpp  CScramAuth.hpp  CScramMongoAuth.hpp  IAuthentication.hpp  IMongoDBAuth.hpp  IPostgreSQLAuth.hpp
include/database/: CConnectionPooler.hpp  CDatabase.hpp  CLibpq.hpp  CPGConnectionPooler.hpp  CPostgresDatabase.hpp
include/network/: CNetwork.hpp  CTcp.hpp  CThread.hpp
include/parsing/: CDocumentHeader.hpp  CDocumentQueryParser.hpp  CMessageParser.hpp  CParser.hpp  IMessageParser.hpp
include/protocol/: BaseCommand.hpp  CBsonType.hpp  CCommandHandler.hpp  CDocumentCommandHandler.hpp  CDocumentProtocolHandler.hpp  CDocumentWireProtocol.hpp  COpMsgHandler.hpp  COpReplyHandler.hpp  CQueryTranslator.hpp  CResponseBuilder.hpp  CollectionNameParser.hpp  CommandRegistry.hpp  CountCommand.hpp  FindCommand.hpp  FindOneCommand.hpp  ICommand.hpp
module_test/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  network_client  network_client.cpp  network_server  network_server.cpp
regression/: CMakeLists.txt  demo.sh  fauxdb_regression_tap.sh  prove_demo.sh
regression/actual/: complex_query_actual.json  delete_document_actual.json  find_documents_actual.json  insert_document_actual.json  list_databases_actual.json  ping_actual.json  update_document_actual.json
regression/expected/: complex_query_expected.json  count_documents_expected.json  delete_document_expected.json  find_documents_expected.json  insert_document_expected.json  list_databases_expected.json  ping_expected.json  update_document_expected.json
regression/integration/: client_regression.cpp  mongo_client_regression.cpp
regression/scripts/: prove_style_tests.sh  regression_tests.js  run_regression_tests.sh  tap_regression_tests.js
src/: CConfig.cpp  CConfiguration.cpp  CLogger.cpp  CServer.cpp  CServerConfig.cpp  CSignal.cpp  aggregation.rs  aggregation_pipeline.rs  authentication.rs  benchmarks.rs  circuit_breaker.rs  command_processor.rs  config.rs  connection_pool.rs  database.rs  documentdb.rs  documentdb_server.rs  error.rs  geospatial.rs  health.rs  indexing.rs  lib.rs  logger.rs  main.cpp  main.rs  mongodb_commands.rs  monitoring.rs  postgresql_manager.rs  postgresql_server.rs  process_manager.rs  production_config.rs  production_main.rs  production_server.rs  rate_limiter.rs  replication.rs  security.rs  server.rs  shutdown.rs  ssl.rs  transactions.rs  (+1 more)
src/auth/: CAuthRegistry.cpp  CBasicAuth.cpp  CScramAuth.cpp  CScramMongoAuth.cpp
src/database/: CConnectionPooler.cpp  CDatabase.cpp  CLibpq.cpp  CPGConnectionPooler.cpp  CPostgresDatabase.cpp
src/network/: CNetwork.cpp  CTcp.cpp  CThread.cpp
src/parsing/: CMessageParser.cpp  CParser.cpp
src/protocol/: BaseCommand.cpp  CBsonType.cpp  CCommandHandler.cpp  CDocumentCommandHandler.cpp  CDocumentProtocolHandler.cpp  CDocumentWireProtocol.cpp  COpMsgHandler.cpp  COpReplyHandler.cpp  CQueryTranslator.cpp  CResponseBuilder.cpp  CollectionNameParser.cpp  CommandRegistry.cpp  CountCommand.cpp  FindCommand.cpp  FindOneCommand.cpp
tests/: aggregate_empty.js  aggregation_tests.rs  authentication_tests.rs  bridge_verification.js  buildInfo.js  count.js  countDocuments.js  delete.js  fauxdb_tests.rs  findOne.js  find_basic.js  hello.js  insert.js  integration_tests.rs  listCollections.js  listDatabases.js  mongodb_comparison_tests.js  mongosh_tests.js  ping.js  postgresql_tests.js  run_mongosh_tests.sh  session_management_tests.rs  setup_postgresql_test.sql  test_all_commands.sh  test_all_variations.sh  test_postgresql_backend.sh  unit_tests.rs  unknown_command.js  update.js
tests/expected/: aggregate_empty.json  aggregate_empty.json.norm  buildInfo.json  buildInfo.json.norm  count.json.norm  countDocuments.json  findOne.json  findOne.json.norm  find_basic.json  find_basic.json.norm  hello.json  hello.json.norm  insert.json.norm  listCollections.json  listCollections.json.norm  listDatabases.json  listDatabases.json.norm  unknown_command.json  unknown_command.json.norm  update.json.norm
tests/mongosh_expected/: aggregate_empty.json
(+96 files in other folders)
